  * Box and action error messages include name.
  * Collapsable blocks are rendered properly after block resize.
  * Collapse button now works after block-size is scaled.
  * Fixed problem with expandable blocks rendered double after resize.
  * Fillscreen block implemented.
  * Fixed problem with break block continuing flow after loop.

TODO:
  * Save errors
  * Display rubrics
  * More efficient until and while?
  * Save to javascript
  * Rtl support
  * Zoom and scroll?
  * Make expand an array, one element for each arg or slot
  * User-defined block types (trivial with factory)
  * Three-arg arg blocks (trivial with factory)
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?
  * Better interoperability with Python version
  * Sugar datastore/toolbar support
  * Add city to long/city to lat block to gmap plugin.
  * Use spanner to open preferences panel for adding plugins and setting
    block size.
  * Unit tests

FEATURE IDEAS:
  * Local variables? (e.g., boxes only defined inside an action?) Note that
    we can use turtlename to create instance variables.
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Camera doesn't work on Android
  * Music block doesn't work on Android
  * Cannot open plugins loader on Android
  * Sometimes returning to backgrounded project results in empty project
  * Loading macros there is a funny collapsed state sometimes.
  * Sometimes the protoblock doesn't return to the palette after dragging.
  * Crashes the Browse activity on the XO.
  * Somehow we end up in a browser resize loop??? (2842 console messages are
    not shown js/activity.js:770)
  * Python show block not compatible with JS show block